wisecow-project/k8s/wisecow.yaml
apiVersion: apps/v1
kind: Deployment
:metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
      - name: wisecow
        image: wisecow-app:latest  # Note: Swap this with your Docker Hub image name later if deploying to a cloud cluster
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4499
---
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4499
    protocol: TCP
  selector:
    app: wisecow
